--- a/Practice/style.css
+++ b/Practice/style.css
@@ -1,73 +1,142 @@
+
 body{
   margin: 0;
-  text-align: center;
+  padding: 30px;
+  margin-top: 10px
+}
+
+.div1{
+    margin-bottom: 60px;
+    text-align: center;
 }
 
 
+#name{
+  font: 40px arial, sans-serif;
+}
 
+#title{
+  font: italic bold 40px/10px Georgia, serif;
+
+}
 
 .container{
+  display: flex;
   height: 600px;
   position: relative;
+  background-image: url("images/background.jpg");
+  background-repeat: no-repeat, repeat;
+  background-size: cover;
+  border: 1px solid #FFFFFF;
+
+}
+
+.flex-container {
+  padding: 0px;
+  margin: 30px;
+  list-style: none;
+
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
-  background-color: #E0EBB8;
 
+  -webkit-flex-flow: row wrap;
+  justify-content: space-around;
 }
 
+.flex-item1,
+.flex-item2,
+.flex-item3,
+.flex-item4,
+.flex-item5,
+.flex-item6 {
+  padding: 5px;
+  width: 200px;
+  height: 150px;
+  margin-top: 10px;
 
-.navbar{
-
-
-
-}
-
-.logo{
-  height: 80px;
-  width: 80px;
-  position: absolute;
-  left: 10%;
-  margin-top: 3%;
-  border-radius: 50%;
-}
-
-
-.links{
-  position: absolute;
-  right: 10%;
-  margin-top: 5%;
-
-}
-
-
-a{
-  text-decoration: none;
-  text-align: right;
-  padding: 20px;
-  font-size: 18px;
-  color: #4AB19A;
-
-
-}
-
-.img1{
-  height: 70px;
-  width: 130px;
-  position: absolute;
-  right: 20%;
-  top:20%;
-
-}
-
-
-.img2{
-  height: 70px;
-  width: 130px;
-  position: absolute;
-  left: 40%;
-  top: 400px;
-
-}
-.textarea{
-  position: absolute;
+  line-height: 150px;
+  color: white;
+  font-weight: bold;
+  font-size: 3em;
   text-align: center;
+}
+
+.flex-item1{
+  background-image: url(images/img1.jpg);
+  background-size: 210px 160px;
+}
+
+.flex-item2{
+  background-image: url(images/img2.jpg);
+  background-size: 210px 160px;
+}
+
+.flex-item3{
+  background-image: url(images/img3.jpg);
+  background-size: 210px 160px;
+}
+
+
+.flex-item4{
+  background-image: url(images/img4.jpg);
+  background-size: 210px 160px;
+}
+
+
+.flex-item5{
+  background-image: url(images/img5.jpg);
+  background-size: 210px 160px;
+}
+
+
+.flex-item6{
+  background-image: url(images/img6.jpg);
+  background-size: 210px 160px;
+}
+
+
+// .animated infinite bounce delay-10s{
+//   animation-duration: 3s;
+//   animation-delay: 2s;
+//   animation-iteration-count: infinite;
+// }
+
+
+
+//hover over flexboxes
+
+.box {
+  width: 100px;
+  height: 100px;
+  background: red;
+  color: white;
+}
+
+#one {
+  position: absolute;
+  top: 950px;
+  left: 10px;
+  padding: 50px;
+  margin-left: 20px;
+  background-image: url(images/one.jpg);
+  background-size: 100px 100px;
+}
+
+.outer {
+  width: 500px;
+  height: 300px;
+  overflow: scroll;
+  padding-left: 150px;
+}
+
+
+.footer{
+  text-decoration: none;
+  text-align: center;
+  padding: 10px;
+  font-size: 15px;
+  color: black;
 }
